navbar now uses react state hook to re-render and fixed bug with navbar not collapsing after choosing a route

--- a/thomas-wong-website/src/css/Navbar.css
+++ b/thomas-wong-website/src/css/Navbar.css
@@ -69,7 +69,7 @@
 
 .toggle-nav {
     position: absolute;
-    top: 7.5vh;
+    top: 7.1vh;
     right: 1rem;
     display: none;
     flex-direction: column;
@@ -85,7 +85,7 @@
     border-radius: 15px;
 }
 
-@media (max-width: 710px) {
+@media (max-width: 740px) {
     .toggle-nav {
         display: flex;
     }
